--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="${tg.url('/js/legend.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mapElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/MainEdit.js')}"></script>    
         <div py:for="widget in widgets" py:strip="True">
