--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -256,6 +256,10 @@ canvas {
     margin-right: 0.5em;
 }
 
+.saving {
+    opacity: 0.7 !important;
+    /*border: 2px dashed gray;*/
+}
 
 /*
 .jxChromeDrag {
@@ -285,4 +289,5 @@ canvas {
     height: 24px;
     margin: 0 auto;
 }
+
 */
