Déplacement de l'icone de chargement dans le dossier common/ car elle peut intéresser d'autres applications que VigiMap. Utilisation de setBusy() dans le dialogue des SHN de VigiBoard pour avertir du chargement en cours. Échappement des textes traduits dans le plugin SHN (évite des problèmes potentiels avec de l'injection de code JS).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2112 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
@@ -7,7 +7,7 @@
     window.addEvent('domready', function () {
         window.hls_dialog = new Jx.Dialog({
             id: "hls_dialog",
-            label: "${l_('Impacted high-level services')}",
+            label: "${l_('Impacted high-level services').encode('backslash')}",
             modal: false,
             resize: false,
             move: true,
@@ -20,6 +20,9 @@
     });
 
     function vigiboard_hls_dialog(ref, url, idd) {
+        window.hls_dialog.setBusy(true);
+        window.hls_dialog.open();
+
         var req = new Request.JSON({
             url: '${tg.url("/get_plugin_value")}',
             onSuccess: function (json, raw) {
@@ -27,9 +30,13 @@
                 for (var i = 0; i < json.services.length; i++)
                     code += '<li>' + json.services[i] + '<\/li>';
                 code += '<\/ul>';
+                window.hls_dialog.setBusy(false);
                 window.hls_dialog.setContent(code);
-                window.hls_dialog.open.bind(window.hls_dialog)();
-            }
+            },
+            onFailure: function (xhr) {
+                window.hls_dialog.setBusy(false);
+                window.hls_dialog.setContent("${l_('Error while retrieving data').encode('backslash')}");
+            },
         });
         req.post({plugin_name: 'shn', idcorrevent: idd});
     }
