Mise au point getOpenSearch
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2114 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -8,10 +8,10 @@
 <xi:include href="master.html" />
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
     <title>Loading VigiGraph...</title>
     <script type="text/javascript" src="js/vigigraph.js"></script>
-    <!-- <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="Vigigraph.py/getOpenSearch"/> -->
+    <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="rpc/getOpenSearch"></link>
     <style type="text/css"><!--@import url(css/style.css); --></style>
   </head>
   <body>
