--- a/src/vigilo/themes/templates/vigigraph/searchhostform.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhostform.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <h1>SupNavigator search</h1>
+        <h1>Vigigraph search</h1>
         <form method="get" action="searchHost">
         <p>Device: <input type="text" name="query" />
         <input type="submit" value="Search" />
