--- a/src/vigilo/themes/templates/vigigraph/searchhost.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhost.html
@@ -1,10 +1,9 @@
 <div xmlns:py="http://genshi.edgewall.org/">
     <head>
-        <title>SupNavigator search</title>
+        <title>Vigigraph search</title>
         <meta http-equiv="Refresh" content="300"></meta >
         <meta http-equiv="Pragma" content="no-cache"></meta >
         <meta http-equiv="Cache-Control" content="no-cache"></meta >
-        <link rel="search" type="application/opensearchdescription+xml" title="Supervision search" href="getOpenSearch"></link>
         <style type="text/css"><!--@import url(../styles/style.css); --></style>
     </head>
     <body>
@@ -19,7 +18,7 @@
                 </tr>
             </table>
         </div>
-        <h1>SupNavigator search</h1>
+        <h1>Vigigraph search</h1>
         <h2>Results:</h2>
         <table>
             <div py:for="h in hosts" py:strip="True">
