--- a/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
@@ -9,44 +9,38 @@
 <?python from genshi import HTML ?>
 <?python from vigilo.models import StateName ?>
 
+
+<div id="vigitable_navigation_bar">
+	<div id="previous_page">
+	    <py:choose>
+		    <img py:when="page == 1" src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page" />
+		    <a py:otherwise="" href="${tg.url('/%d' % (page-1))}">
+		        <img src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page"/>
+		    </a>
+		</py:choose>
+	</div>
+	<div id="next_page">
+	    <py:choose>
+		    <img py:when="page >= nb_pages" src="${tg.url('/images/fleche_down.png')}"  alt="Next" title="Next page" />
+		    <a py:otherwise="" href="${tg.url('/%d' % (page+1))}">
+		        <img src="${tg.url('/images/fleche_down.png')}" alt="Next" title="Next page"/>
+		    </a>
+		</py:choose>
+	</div>
+  	<div id="pagination">
+  		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+  		<py:if test="nb_pages > 1">
+		    Pages 
+		    <py:for each="p in range(1, nb_pages + 1)">
+		        <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
+		        <span py:if="p == page" py:replace="p" />
+		    </py:for>
+		</py:if>
+	</div>
+</div>
+
 <table class="vigitable" summary="Event table">
 	<thead>
-		<tr>
-			<td id="previous_page">
-			    <py:choose>
-				    <img py:when="page == 1" src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page" />
-				    <a py:otherwise="" href="${tg.url('/%d' % (page-1))}">
-				        <img src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page"/>
-				    </a>
-				</py:choose>
-			</td>
-			<!--!
-				events[0] contient les champs affichés en permanence.
-				events[1][6] contient une liste des en-têtes générés par les plugins.
-				La somme est calculée de sorte que le bandeau de changement de pages
-				est aligné sur le reste du tableau (les alertes).
-- 1 + len(events[1][6])
-			-->
-    		<td colspan="${len(events[0])}" id="pagination">
-    		    ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info} <br />
-    		    <py:if test="nb_pages > 1">
-				    Pages 
-				    <py:for each="p in range(1, nb_pages + 1)">
-				        <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
-				        <span py:if="p == page" py:replace="p" />
-				    </py:for>
-				</py:if>
-			</td>
-			<td id="next_page">
-			    <py:choose>
-				    <img py:when="page >= nb_pages" src="${tg.url('/images/fleche_down.png')}"  alt="Next" title="Next page" />
-				    <a py:otherwise="" href="${tg.url('/%d' % (page+1))}">
-				        <img src="${tg.url('/images/fleche_down.png')}" alt="Next" title="Next page"/>
-				    </a>
-				</py:choose>
-			</td>
-		</tr>
-
 		<tr>
 			<py:for each="(pname,pstyle) in events[0]">
 			    <th py:attrs="pstyle">${HTML(pname)}</th>
