--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
     <title>Loading VigiGraph...</title>
     <script type="text/javascript" src="js/vigigraph.js"></script>
-    <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="rpc/getOpenSearch"></link>
+    <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="/rpc/getOpenSearch"></link>
     <style type="text/css"><!--@import url(css/style.css); --></style>
   </head>
   <body>
